--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "next": "^15.4.5",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-swipeable": "^7.0.2",
+    "react-use": "^17.6.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
