--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-swipeable": "^7.0.2",
     "react-use": "^17.6.0",
