--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@gsap/react": "^2.1.2",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.3.1",
     "@tabler/icons-react": "^3.34.1",
     "clsx": "^2.1.1",
