--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gsap/react": "^2.1.2",
     "@mui/material": "^7.3.1",
     "@tabler/icons-react": "^3.34.1",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
