--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
     "lenis": "^1.3.8",
     "lucide-react": "^0.536.0",
@@ -35,8 +36,10 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
+    "react-qr-barcode-scanner": "^2.1.8",
     "react-swipeable": "^7.0.2",
     "react-use": "^17.6.0",
+    "react-webcam": "^7.2.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
